on commence à avoir des projets avec beaucoup de code, autant monter par défaut la mémoire allouée au maven-surefire-plugin
git-svn-id: svn+ssh://svn.projects.openwide.fr/svnroot/owsi-tools/branches/owsi-core-0.8-MAINTENANCE@2200 d3474844-eb8e-4abc-b058-2b321fed648b