@@ -993,6 +993,9 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>${owsi-core.maven-surefire-plugin.version}</version>
+					<configuration>
+						<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=256m</argLine>
+					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
